--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -1,7 +1,7 @@
 main {
     position: relative;
     padding: 5em;
-    top: 56px;
+    /* top: 56px; */
     background: linear-gradient(180deg, #E2E8EF 0%, #CBDDE6 100%);
     /* text-align: center; */
 }
